data/all_generated_tests/raw_wast_tests/loop_InvalidorInconsistentControlFlowGraph_854.wast
;; 5. **Uninitialized Operands on Branch**:    - **Description**: Construct a loop where branches (`br` or `br_if`) consume operands inconsistent with the loop’s expected input type.    - **Constraint Checked**: Operand stack management and type consistency.    - **CFG Relevance**: Validates the CFG handles operand stack unwinding and type correctness before and after branch execution.

(assert_invalid
  (module (func $uninitialized-operands-on-branch
    (loop (result i32)
      (i32.const 10) 
      (br 0)
    )
  ))
  "type mismatch"
)